2024-12-10T01:53:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12247851858 # 505
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-10
* notice: last 14d: unq all: 3 1690
* notice: prev accum: outdated-unq outdated-all / unq all: 2322 234977 / 2340 236745
* notice: next accum: outdated-unq outdated-all / unq all: 2323 235101 / 2341 236867
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -1 -76 / +1 +20 -0 -0 / 1 20
* notice: removed / changed dates: [2024-11-25] / [2024-11-26 2024-12-09 2024-12-10]

2024-12-09T01:54:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12227468348 # 504
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-09
* notice: last 14d: unq all: 4 1693
* notice: prev accum: outdated-unq outdated-all / unq all: 2321 234850 / 2339 236617
* notice: next accum: outdated-unq outdated-all / unq all: 2322 234977 / 2340 236745
* notice: prev exec diff / last date diff / accum: unq all: +1 +128 -0 -75 / +1 +19 -0 -0 / 1 19
* notice: removed / changed dates: [2024-11-24] / [2024-11-25 2024-12-08 2024-12-09]

2024-12-08T01:58:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12217900320 # 503
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-08
* notice: last 14d: unq all: 4 1693
* notice: prev accum: outdated-unq outdated-all / unq all: 2320 234722 / 2338 236497
* notice: next accum: outdated-unq outdated-all / unq all: 2321 234850 / 2339 236617
* notice: prev exec diff / last date diff / accum: unq all: +1 +120 -0 -74 / +1 +17 -0 -0 / 1 17
* notice: removed / changed dates: [2024-11-23] / [2024-11-24 2024-12-07 2024-12-08]

2024-12-07T01:49:10Z: