@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-12-10T01:53:12Z",
-  "count" : 20,
-  "count_minmax" : [ 20, 20 ],
-  "count_decinc" : [ -0, +20 ],
+  "timestamp" : "2024-12-11T01:51:20Z",
+  "count" : 123,
+  "count_minmax" : [ 20, 123 ],
+  "count_decinc" : [ -0, +123 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
