@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-12-10T01:53:12Z",
-  "count_outdated" : 235101,
-  "uniques_outdated" : 2323,
-  "count" : 236867,
-  "uniques" : 2341,
+  "timestamp" : "2024-12-11T01:51:20Z",
+  "count_outdated" : 235226,
+  "uniques_outdated" : 2325,
+  "count" : 236991,
+  "uniques" : 2342,
   "clones" : [
     {
-      "timestamp": "2024-11-26T00:00:00Z",
-      "count": 49,
-      "count_minmax": [ 25, 125 ],
-      "count_decinc": [ 76, 125 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-11-27T00:00:00Z",
-      "count": 124,
+      "count": 49,
       "count_minmax": [ 23, 124 ],
-      "count_decinc": [ 0, 124 ],
+      "count_decinc": [ 75, 124 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,18 @@
     },
     {
       "timestamp": "2024-12-10T00:00:00Z",
-      "count": 20,
-      "count_minmax": [ 20, 20 ],
-      "count_decinc": [ 0, 20 ],
+      "count": 123,
+      "count_minmax": [ 20, 123 ],
+      "count_decinc": [ 0, 123 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-11T00:00:00Z",
+      "count": 21,
+      "count_minmax": [ 21, 21 ],
+      "count_decinc": [ 0, 21 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
