@@ -3,13 +3,8 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-11-26T00:00:00Z",
-      "count": 49,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-11-27T00:00:00Z",
-      "count": 124,
+      "count": 49,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2024-12-10T00:00:00Z",
-      "count": 20,
+      "count": 123,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-11T00:00:00Z",
+      "count": 21,
       "uniques": 1
     }
   ]
